No longer distinct between simple and nested variation